fixes line spacing on lists

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -90,8 +90,8 @@ body {
 @media (max-width: 980px) { body { padding-top: 0px; } }
 
 ul li, ol li	{
+	line-height: 1.4em;
 	margin-bottom: 9px;
-	line-height: 22px;
 }
 
 p, h2, h3, h4, h5, h6 	{
